@@ -96,7 +96,8 @@ CREATE TABLE `task_works` (
   `path_stdout` varchar(2000) NOT NULL DEFAULT '',
   `process_status` enum('starting','work','compilehybride','compilecommand','loadhashes','buildhashlist','preparedicts') DEFAULT NULL,
   `stderr` text NOT NULL,
-  `work_time` int(10) UNSIGNED NOT NULL DEFAULT '0'
+  `work_time` int(10) UNSIGNED NOT NULL DEFAULT '0',
+  `hide` tinyint(1) NOT NULL DEFAULT '0'
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
 ALTER TABLE `algs`
